fix: 修复了一些错误

--- a/2020 南三·贰/1 记社团的二三人，二三事（壹）.md
+++ b/2020 南三·贰/1 记社团的二三人，二三事（壹）.md
@@ -37,7 +37,8 @@
 其实还想在空间看到帅气好看的北北【被拖走
 
 ### 02
-子惜，颜色是子惜姐姐选的，虽然太浅了但是因为很适合，所以就没找你换哦，就加了个阴影……
+
+**子惜**，颜色是子惜姐姐选的，虽然太浅了但是因为很适合，所以就没找你换哦，就加了个阴影……
 
 一直觉得你是个很温柔的人，所以遇到开心或者不开心的事情时不时都会去找你，特别是不开心的时候，其实有时候说的某些事情并没有真的希望子惜慢慢看完（毕竟说这些事情的时候大多数是在大深夜的，要去思考别人的想法实在是强人所难了。但是哪怕是得到一句安慰我都会觉得好很多。
 你说，你喜欢温柔的人，和温柔的人相处总是会让人觉得很舒服很安心。你就是那样的人啊……而且正是因为如此你才吸引了一群和你一样拥有温柔和常常鼓励你的特质的人。
